examples/bad/increment-wrong-type.elina
fn main(): void {
  var b: bool = true;
  b++;
}